# mk3-controls

./: .gitignore  Makefile  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
front/controls-ui/: README.md  package.json  vue.config.js
front/controls-ui/src/: App.vue  main.js  output-template.html
front/web-demo/src/: App.vue  main.js
main/: CMakeLists.txt  component.mk  esp_rest_main.c  keep_alive.c  led.c  nvs.c  rest_server.c  servo.c
main/certs/: cacert.pem  prvtkey.pem
mcpwm_servo_control/main/: mcpwm_servo_control_example.c
